rename files, reorganize resources and update pftc course stuff

--- a/webpage/_bookdown.yml
+++ b/webpage/_bookdown.yml
@@ -3,11 +3,11 @@ new_session: true
 book_filename: "ClimEx Handbook"
 rmd_files:
   - "index.Rmd"
-  - "1_study_system.Rmd"
-  - "2_course.Rmd"
-  - "3_resources.Rmd"
+  - "1_course.Rmd"
+  - "2_study_system.Rmd"
+  - "3_resource_field_traits.Rmd"
   - "3-1_before_field.Rmd"
   - "3-2_measure_traits.Rmd"
-  - "3-3_biostats.Rmd"
-  - "3-4_bootstrapping.Rmd"
-  - "4_group_projects.Rmd"
+  - "4_resources_code_stats.Rmd"
+  - "4-1_biostats.Rmd"
+  - "4-2_bootstrapping.Rmd"
