data curation tutorial

--- a/webpage/_bookdown.yml
+++ b/webpage/_bookdown.yml
@@ -8,6 +8,13 @@ rmd_files:
   - "3_resource_field_traits.Rmd"
   - "3-1_before_field.Rmd"
   - "3-2_measure_traits.Rmd"
-  - "4_resources_code_stats.Rmd"
-  - "4-1_biostats.Rmd"
-  - "4-2_bootstrapping.Rmd"
+  - "4_work_with_PFTC_data.Rmd"
+  - "4-1_PFTC_data_repos.Rmd"
+  - "4-2_download.Rmd"
+  - "5_resources_code_stats.Rmd"
+  - "5-1_biostats.Rmd"
+  - "5-2_data_curation.Rmd"
+  - "5-3_bootstrapping.Rmd"
+  #- "5-4_community_data.Rmd"
+  #- "5-5_trait_data.Rmd"
+  #- "5-6_ordination.Rmd"
