add community tutorial

--- a/webpage/_bookdown.yml
+++ b/webpage/_bookdown.yml
@@ -14,7 +14,7 @@ rmd_files:
   - "5_resources_code_stats.Rmd"
   - "5-1_biostats.Rmd"
   - "5-2_data_curation.Rmd"
-  - "5-3_bootstrapping.Rmd"
-  #- "5-4_community_data.Rmd"
+  - "5-3_community.Rmd"
+  - "5-4_bootstrapping.Rmd"
   #- "5-5_trait_data.Rmd"
   #- "5-6_ordination.Rmd"
