add trait script

--- a/quarto_webpage/_quarto.yml
+++ b/quarto_webpage/_quarto.yml
@@ -34,7 +34,7 @@ book:
       - 9_data_curation.qmd
       - 10_community.qmd
       - 11_bootstrap.qmd
-      #- 12_traits.qmd
+      - 12_traits.qmd
 
 bibliography: bibliography.bib
 #suppress-bibliography: true
